<resources>
    <string name="app_name">Lattice</string>
    <string name="app_lattice">功过格</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="logout">登出</string>
    <string name="login_login">登陆</string>
    <string name="login_account">账号</string>
    <string name="login_password">密码</string>
    <string name="login_register">注册</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="nickname">昵称</string>
    <string name="register_reconfirm">确认密码</string>
    <string name="login_success">登陆成功</string>
    <string name="email">电子邮件</string>
    <string name="white_behavior">白业</string>
    <string name="white_counter">白业对治</string>
    <string name="black_counter">黑业对治</string>
    <string name="black_behavior">黑业</string>
    <string name="str_record">记录</string>
    <string name="dialog_title_timechoose">选择时间</string>
    <string name="record_choose_template">选择模板</string>
    <string name="str_behavior">业习</string>
    <string name="str_behavior_choose">选择业习</string>
    <string name="str_add">添加</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <string-array name="duration">
        <item>每周</item>
        <item>每月</item>
        <item>每年</item>
    </string-array>

    <string-array name="chart">
        <item>饼状图</item>
        <item>折线图</item>
    </string-array>
</resources>
