<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity" >

    <EditText
        android:id="@+id/register_account"
        style="@style/LoginEditText"
        android:layout_gravity="center_horizontal"
        android:hint="@string/login_account" />
    
    <EditText
        android:id="@+id/register_nickname"
        style="@style/LoginEditText"
        android:layout_gravity="center_horizontal"
        android:hint="@string/nickname" />
    
    <EditText
        android:id="@+id/register_email"
        style="@style/LoginEditText"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email" />
    
    <EditText
        android:id="@+id/register_password"
        style="@style/PasswordEditText"
        android:layout_gravity="center_horizontal"
        android:hint="@string/login_password" />
    
    <EditText
        android:id="@+id/register_reconfirm"
        style="@style/PasswordEditText"
        android:layout_gravity="center_horizontal"
        android:hint="@string/register_reconfirm" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp" >
        
        <Button
            android:id="@+id/register_confirm"
            style="@style/LoginButton"
            android:text="@string/confirm" />
        
        <Button
            android:id="@+id/register_cancel"
            style="@style/LoginButton"
            android:layout_marginLeft="10dp"
        	android:layout_marginStart="10dp"
        	android:text="@string/cancel" />
        
    </LinearLayout>
    
</LinearLayout>