<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include layout="@layout/lattice_tool_bar" />

    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/lattice_drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--main layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.gc.materialdesign.views.ButtonRectangle
                        android:id="@+id/btn_wht_bhv"
                        style="@style/MainButton"
                        android:background="#1E88E5"
                        android:text="@string/white_behavior" />

                    <com.gc.materialdesign.views.ButtonRectangle
                        android:id="@+id/btn_wht_cnt"
                        style="@style/MainButton"
                        android:background="#CC0000"
                        android:text="@string/white_counter" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.gc.materialdesign.views.ButtonRectangle
                        android:id="@+id/btn_blk_cnt"
                        style="@style/MainButton"
                        android:background="#00CC00"
                        android:text="@string/black_counter" />

                    <com.gc.materialdesign.views.ButtonRectangle
                        android:id="@+id/btn_blk_bhv"
                        style="@style/MainButton"
                        android:background="#000000"
                        android:text="@string/black_behavior" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <!--slide menu-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#aaffffff"
            android:divider="@drawable/list_divider"
            android:orientation="vertical"
            android:padding="5dp"
            android:showDividers="middle|beginning|end">

            <LinearLayout
                android:id="@+id/main_remind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/main_menu_item_text"
                    android:text="提醒设置" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/main_menu_item_text"
                    android:text="备份与恢复" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_encouterremind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/main_menu_item_text"
                    android:text="对治提醒与每日总结设置" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_export"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/main_menu_item_text"
                    android:text="导出为excel" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v4.widget.DrawerLayout>


</LinearLayout>